--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-
-mongodb+srv://daniel:daniel123@cluster0.93j96.mongodb.net/db_movie?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://daniel:daniel123@cluster0.93j96.mongodb.net/db_movie?retryWrites=true&w=majority
